# transmittal-builder

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  AGENTS.md  ARCHITECTURE_REFACTOR.md  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  RELEASE_NOTES.md  RELEASING.md  TROUBLESHOOTING.md  USER_MANUAL.md  environment.yml
.github/: copilot-instructions-new.md  copilot-instructions.md  dependabot.yml
.github/copilot/: mcp-config.json
.github/instructions/: desktop-sidecar.instructions.md
.github/prompts/: consume-toolkit-bump.prompt.md
.github/workflows/: auto-tag.yml  backend-ci.yml  copilot-setup-steps.yml  release.yml  toolkit-pin-check.yml
backend/: .env.example  .gitignore  README_SIDECAR.md  activation.py  app.py  auth.py  database.py  requirements-build.txt  requirements.txt  test_auth_integration.py  transmittal_backend.spec
backend/core/: __init__.py  auth.py  excel_parser.py  pdf_merge.py  render.py
backend/data/: project_registry.json  transmittal_builder.db  user_profiles.json
backend/emails/: __init__.py  sender.py
backend/templates/: transmittal_template.docx
docs/: AUTO_UPDATER.md  CONDA.md  OPERATOR_RUNBOOK.md  mcp.md
frontend/: .env.example  .gitignore  .npmrc  index.html  package-lock.json  package.json  splash.html  transmittal-builder.jsx  updater.html  vite.config.js
frontend/src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/installer/: hooks.nsh
frontend/src-tauri/src/: lib.rs  main.rs  sidecar.rs  splash.rs  updater.rs
scripts/: bump-version.mjs  check-toolkit-pins.ps1  fetch-updater-shim.ps1  generate-icons.mjs  generate-latest-json.mjs  patch-installer-hooks.mjs  publish-to-drive.ps1  smoke-auth-enforced.ps1  sync-framework-tauri.mjs
(+35 files in other folders)
