[package]
name = "transmittal-builder"
version = "6.1.6"
description = "Transmittal Builder — Tauri desktop shell"
authors = ["Koraji"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the generated lib name distinct from the binary.
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
semver = "1"

[profile.release]
# Shrink binary size for the distributed installer.
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
